--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           </li>
 
           <li class="item">
-            <img src="./images/image-3.png" alt="photo3" width="420" />
+            <img src="./images/image-3.png" alt="photo3" width="420px" />
 
             <p class="description">Photodiary</p>
 
@@ -79,7 +79,7 @@
             </p>
           </li>
           <li class="item">
-            <img src="./images/image-4.png" alt="photo4" width="420" />
+            <img src="./images/image-4.png" alt="photo4" width="420px" />
 
             <p class="description">Photodiary</p>
 
