--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <li class="item">
             <img src="./images/image-3.png" alt="photo3" width="420px" />
 
-            <p class="description">Photodiary</p>
+            <p class="description">PhotoDiary</p>
 
             <h2>American dream</h2>
             <p>
@@ -81,7 +81,7 @@
           <li class="item">
             <img src="./images/image-4.png" alt="photo4" width="420px" />
 
-            <p class="description">Photodiary</p>
+            <p class="description">PhotoDiary</p>
 
             <h2>A day exploring the Alps</h2>
             <p>
